--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+  <noscript>
+    <div class="mx-auto container flex flex-col justify-center items-center h-screen">
+      <div class="border-b-4 border-accent bg-accent-lighten text-accent-content p-8 rounded shadow-xl">
+        <p class="text-center text-2xl">
+          You need to enable JavaScript to run this app.
+          If not, we cannot interact with the blockchain.
+        </p>
+      </div>
+  
+    </div>
+  </noscript>
   <div id="root"></div>
 </body>
 <script src="./index.tsx"></script>
